--- a/sources/LcaLc/LcaLcGUI/pom.xml
+++ b/sources/LcaLc/LcaLcGUI/pom.xml
@@ -39,12 +39,40 @@
                 </executions>
             </plugin>
         </plugins>
-    </build>	
-	    <dependencies>              
+    </build>
+    <repositories>
+        <repository>
+            <id>unknown-jars-temp-repo</id>
+            <name>A temporary repository created by NetBeans for libraries and jars it could not identify. Please replace the dependencies in this repository with correct ones and delete this repository.</name>
+            <url>file:${project.basedir}/lib</url>
+        </repository>
+    </repositories>
+    <dependencies>
+                <dependency>
+            <groupId>org.jdesktop.bsaf</groupId>
+            <artifactId>bsaf</artifactId>
+            <version>1.9.2</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>jnlp</artifactId>
+                    <groupId>javax.jnlp</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 	<dependency>
             <groupId>pl.ll.lcalc</groupId>
-            <artifactId>LcaLcMath</artifactId>
+            <artifactId>LcaLcExprParser</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.swinglabs</groupId>
+            <artifactId>swing-layout</artifactId>
+            <version>1.0.3</version>
+        </dependency>
+        <dependency>
+            <groupId>unknown.binary</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
